# rust-wasm-snake

./: .rustfmt.toml  Cargo.toml  README.md  index.html
src/: lib.rs  snake.rs
