[package]
name = "rust-wasm-snake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.80"
js-sys = "0.3.57"
getrandom = { version = "0.2.6", features = ["js"] }

[dependencies.web-sys]
version = "0.3.57"
features = [
	"Window", "console", "Document", "HtmlElement", "Element",
	"CssStyleDeclaration", "HtmlDivElement", "KeyboardEvent"
]
